fixed the shifting footer links when on hover

--- a/src/App.css
+++ b/src/App.css
@@ -122,5 +122,6 @@
 
   .top_button {
     margin: 36px 0px;
+    padding: 8px 80px;
   }
 }
