--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -11,92 +11,80 @@
 }
 
 .footer_container {
-  width: 80%;
-  font-size: 12px;
-  font-weight: 400;
   color: #ffffff;
+  width: 100%;
 }
 
 .footer_container ul {
   list-style: none;
-  padding: 24px 0px;
   text-decoration: none;
-  color: #ffffff;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 32px 0px;
 }
 .footer_container li {
-  text-decoration: none;
-  color: #ffffff;
-}
-
-.footer_number {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   text-decoration: none;
   color: #ffffff;
   box-sizing: border-box;
+  margin: 0px 4px;
+}
+
+.footer_cta {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  font-size: 16px;
+  padding: 24px 0px;
 }
 .footer_phone {
   height: 16px;
-  padding: 0px 4px;
+  padding: 0px 16px;
 }
-
+.footer_number {
+  text-decoration: none;
+  color: #ffffff;
+}
+.footer_number:hover {
+  color: #df3063;
+}
 .footer_copyright {
   text-align: center;
   margin-bottom: 36px;
 }
 
-.footer_container li:hover,
-.footer_container li:active {
-  color: #df3063;
-  font-weight: bold;
-}
-.footer_container a:hover,
-.footer_container a:active {
-  color: #df3063;
-  font-weight: bold;
-}
-
-.row {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  align-items: center;
-}
-.column {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-
 .footer_logo {
-  width: 100px;
-  padding: 24px 0px;
-  align-self: center;
+  width: 33vw;
 }
 
 .social_media_wrapper {
   display: flex;
-  flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
+  padding: 20px 20px;
 }
 .social_media_icon {
-  width: 20px;
-  padding: 0px 8px;
+  width: 44px;
+  padding: 0px 12px;
 }
+
 .social_media_icon:hover {
   cursor: pointer;
   transform: scale(1.02);
-}
-.footer_logo:hover {
-  cursor: pointer;
-  transform: scale(1.01);
-  color: #df3063;
 }
 
 .top_container {
   display: flex;
   justify-content: center;
 }
-
+.footer_copyright {
+  padding-top: 24px;
+}
 @media (min-width: 769px) {
   .footer_wrapper {
     overflow: hidden;
@@ -105,22 +93,35 @@
     width: 60%;
     font-size: 16px;
     justify-content: space-between;
-    padding: 64px;
   }
-
+  .footer_container li {
+    width: 8em;
+  }
+  .footer_container li:hover,
+  .footer_container li:active {
+    color: #df3063;
+    font-weight: bold;
+  }
+  .footer_cta {
+    font-size: 20px;
+  }
   .footer_phone {
     height: 24px;
     padding: 0px 16px;
   }
+
   .footer_logo {
     width: 200px;
     padding: 36px 0px;
+  }
+  .social_media_wrapper {
+    padding: 0px;
   }
   .social_media_icon {
     width: 40px;
   }
   .footer_copyright {
-    border-top: 1px solid #666;
+    border-top: 1px solid #999;
     padding-top: 26px;
     font-size: 12px;
   }
